--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>3D Character Generator</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Character Generator</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="controls">
-    <select id="characterSelect">
-      <option value="body.glb">شخصية 1</option>
-      <option value="Soldier.glb">شخصية 2</option>
-      <option value="TranThiNgocTham.glb">شخصية 3</option>
-    </select>
-    <button id="generateBtn">إنشاء شخصية</button>
-    <button id="storyBtn">عرض القصة</button>
-    <button id="statsBtn">عرض الإحصائيات</button>
-    <button id="rarityBtn">عرض الندرة</button>
-    <input type="file" id="uploadFace" accept="image/*" />
-  </div>
+  <header>
+    <h1>🎭 Character Generator</h1>
+  </header>
 
-  <div id="storyBox" class="infoBox"></div>
-  <div id="statsBox" class="infoBox"></div>
-  <div id="rarityBox" class="infoBox"></div>
+  <main>
+    <section class="viewer">
+      <div id="model-viewer"></div>
+    </section>
 
-  <canvas id="scene"></canvas>
+    <section class="controls">
+      <label for="model-select">اختر شخصية:</label>
+      <select id="model-select">
+        <option value="assets/models/body.glb">شخصية 1</option>
+        <option value="assets/models/Soldier.glb">شخصية 2</option>
+        <option value="assets/models/TranThiNgocTham.glb">شخصية 3</option>
+      </select>
 
-  <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/examples/js/loaders/GLTFLoader.js"></script>
+      <button id="generate">🎲 أنشئ شخصية</button>
+      <button id="upload-face">📷 أضف صورة وجه</button>
+      <input type="file" id="face-input" accept="image/*" style="display:none">
+    </section>
+
+    <section class="info">
+      <h2>📖 القصة</h2>
+      <p id="story">اضغط "أنشئ شخصية" لبدء المغامرة</p>
+
+      <h2>📊 الإحصائيات</h2>
+      <ul id="stats"></ul>
+
+      <h2>💎 الندرة</h2>
+      <p id="rarity">---</p>
+    </section>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
